--- a/app/src/main/res/layout/fragment_cameras.xml
+++ b/app/src/main/res/layout/fragment_cameras.xml
@@ -8,7 +8,6 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="vertical" />
+        android:layout_weight="1" />
 
 </LinearLayout>
