--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -22,6 +22,6 @@
         android:gravity="center"
         android:text="@string/settings_des"
         android:textColor="@color/text_color"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
 </LinearLayout>
